<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ⭐ زر نجمة لحفظ الصفحة أو إزالتها -->
    <item
        android:id="@+id/action_toggle_page_bookmark"
        android:title="@string/action_toggle_page_bookmark"
        android:icon="@drawable/ic_star_border"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toggle_repeat"
        android:title="@string/action_toggle_repeat"
        android:icon="@drawable/ic_repeat"
        app:showAsAction="never" />

    <!-- - خيارات التفسير - -->
    <item
        android:id="@+id/action_download_tafsirs"
        android:title="@string/action_download_tafsirs"
        android:icon="@drawable/ic_download"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_select_tafsir"
        android:title="@string/action_select_tafsir"
        android:icon="@drawable/ic_tafsir"
        app:showAsAction="never" />

</menu>
